[gd_scene load_steps=9 format=3 uid="uid://0ij85ox8j5li"]

[ext_resource type="Script" uid="uid://bef5hdr857usi" path="res://scripts/UI/DirectionsPanel.gd" id="1_byls2"]
[ext_resource type="Texture2D" uid="uid://cadej1ql2fsby" path="res://assets/icons/arrow_up.png" id="2_lf8xo"]
[ext_resource type="Texture2D" uid="uid://cpgy0fhrq2vko" path="res://assets/icons/arrow_right.png" id="3_b7vkp"]
[ext_resource type="Texture2D" uid="uid://dsirexkhqjhcn" path="res://assets/icons/arrow_left.png" id="3_jxok8"]
[ext_resource type="LabelSettings" uid="uid://de705pwk1itxt" path="res://themes/spell_lbl.tres" id="3_lf8xo"]
[ext_resource type="Texture2D" uid="uid://bsbq6d2ye0jry" path="res://assets/icons/arrow_down.png" id="4_b7vkp"]
[ext_resource type="StyleBox" uid="uid://d0vmgu4kc28ha" path="res://themes/SeqLabel.tres" id="6_nv0xt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljces"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="DirectionsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_byls2")
tex_up = ExtResource("2_lf8xo")
tex_right = ExtResource("3_b7vkp")
tex_down = ExtResource("4_b7vkp")
tex_left = ExtResource("3_jxok8")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 75.0
offset_right = 110.0
offset_bottom = 193.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljces")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="SeqLine" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("6_nv0xt")
text = "Danger Free"
label_settings = ExtResource("3_lf8xo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SeqContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="Seq1" type="TextureRect" parent="Panel/VBox/SeqContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
expand_mode = 1

[node name="Seq2" type="TextureRect" parent="Panel/VBox/SeqContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
expand_mode = 1

[node name="Seq3" type="TextureRect" parent="Panel/VBox/SeqContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
expand_mode = 1

[node name="Seq4" type="TextureRect" parent="Panel/VBox/SeqContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
expand_mode = 1
